2015-11-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 37127 (minor tweak): Doc/Zsh/params.yo: document indexing of
	$signals.

2015-11-16  Mikael Magnusson  <mikachu@gmail.com>

	* Eric Cook: 36986: Functions/Misc/zed: Add -- to the `functions'
	builtin calls

	* Eric Cook: 37050: Completion/BSD/Command/_sockstat: minor improvements

2015-11-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 37119: Doc/Zsh/expn.yo: further "Rules" clarifications

2015-11-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 37115: Completion/Unix/Commmand/_git, Doc/Zsh/expn.yo: update
	for changes in ${(P)...} evaluation.

2015-11-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/zle_tricky.c: Make $EDITOR's
	jump-to-matching-brace happy.

	* 37031: Completion/Unix/Command/_git: _git-merge: Exclude
	ancestors of HEAD from recent commit completion

	* 37025: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Add a cherry-pick patch-format

2015-11-13  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 37090: Doc/zman.yo, Doc/ztexi.yo: handle blank lines correctly
	in yodl macro example()

	* unposted: Doc/Zsh/builtins.yo, Doc/Zsh/contrib.yo,
	Doc/Zsh/func.yo, Doc/Zsh/grammar.yo, Doc/Zsh/mod_pcre.yo,
	Doc/Zsh/params.yo, Doc/Zsh/zle.yo: cosmetic format fix

2015-11-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 37096: Src/subst.c, Test/D04parameter.ztst: make top-level
	${(P)...} with nested ${(P)...} to the right thing.

	* 37094: Src/subst.c, Test/D04parameter.ztst: Further tweaks to
	parameter name references: array safety; nested parameters; tests.

2015-11-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 37092: Doc/Zsh/expn.yo, Src/Zle/compctl.c,
	Src/Zle/zle_tricky.c, Src/cond.c, Src/exec.c, Src/glob.c,
	Src/subst.c, Src/zsh.h: make a ${(P)name} subexpression properly
	refer to a parameter name.

	* 37091: Src/Zle/zle_utils.c: clear lastline and lastlinesz when
	freeing.

2015-11-10  Peter Stephenson  <p.stephenson@samsung.com>
