@@ -1,5 +1,8 @@
 2015-11-17  Peter Stephenson  <p.stephenson@samsung.com>
 
+	* 37128: Src/lex.c, Test/D06subscript.ztst: work around alias
+	expansion trashing subcript being parsed.
+
 	* 37127 (minor tweak): Doc/Zsh/params.yo: document indexing of
 	$signals.
 
